[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "syndot"
dynamic = ["version"]
requires-python = ">=3.11"
authors = [
  {name = "Andrea Blengino", email = "ing.andrea.blengino@protonmail.com"},
]
maintainers = [
  {name = "Andrea Blengino", email = "ing.andrea.blengino@protonmail.com"},
]
description = "Dotfiles link management tool"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Desktop Environment :: File Managers"
]

[project.optional-dependencies]
test = [
  "coverage==7.3.2",
  "hypothesis==6.88.1",
  "pytest==7.4.3",
  "pytest-cov==4.1.0",
]

[tool.setuptools.packages.find]
include = ["syndot", "syndot.*"]

[tool.setuptools.package-data]
"*" = ["*.ini", "*.colorscheme"]
