[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "syndot"
dynamic = ["version"]
requires-python = ">=3.11"
authors = [
  {name = "Andrea Blengino", email = "ing.andrea.blengino@protonmail.com"},
]
maintainers = [
  {name = "Andrea Blengino", email = "ing.andrea.blengino@protonmail.com"},
]
description = "Dotfiles link management tool"
readme = "README.rst"
license = { file = "LICENSE" }
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Desktop Environment :: File Managers"
]

[project.optional-dependencies]
doc = [
  "furo==2024.7.18",
  "sphinx==8.0.2"
]
test = [
  "coverage==7.6.0",
  "hypothesis==6.108.5",
  "pytest==8.3.2",
  "pytest-cov==5.0.0",
]

[tool.setuptools.packages.find]
include = ["syndot", "syndot.*"]

[tool.setuptools.package-data]
"*" = ["*.ini", "*.colorscheme"]

[project.urls]
Homepage = "https://github.com/AndreaBlengino/syndot"
Documentation = "https://syndot.readthedocs.io/en/latest/index.html"
Issues = "https://github.com/AndreaBlengino/syndot/issues"
Repository = "https://github.com/AndreaBlengino/syndot"
